Added README and Modified Formatting

--- a/Bayesian Neural Network/BayesianNueralNetwork.ipynb
+++ b/Bayesian Neural Network/BayesianNueralNetwork.ipynb
@@ -3,38 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Exploring Bayensian Neural Networks\n",
-    "By: Connor McCambridge\n",
-    "\n",
-    "\n",
-    "## Objective\n",
-    "\n",
-    "Two of the topics that interest me the most is Markov Chain Monte Carlo sampling method and neural networks, so when looking at projects to do, combining these two topics together in exploring Bayensian neural networks for a deeper understanding seemed like a natural fit. Through this exploration of these topics I want to gain a better understand how Bayensians neural networks operate and function by building and testing multiple neural networks using various MCMC sampling methods for a tranditional classification problem.\n",
-    "\n",
-    "## Backgroud\n",
-    "\n",
-    "Neural networks are a type of computing system that is inspired around the biological neural network that makes up a typical animal’s brain. The neural network is made of different nodes and the connections between those nodes. The nodes of the network are organized into layers, starting with an input layer where inputs are fed into the model, followed by hidden layers, and finally resulting at the output layer where some resulting output from the model is generated. Although it common for neural network to just have one layer, a multitude have a number of hidden layers with multiple number of nodes. The more hidden layers and nodes the more complex the problem solving will become. Each connection between nodes is used to signal between one another with both the nodes and the connections have weights assigned to them that then will adjusting during the learning process of the modeling.\n",
-    "\n",
-    "The learning process works by model first assigning small random weights to the nodes and connection. After the first weights have been assigned then the model propagates the inputs by running them through the model. After learning how it did the model performed the model backpropagates the error of model by updating the weights and bias in the backward direction. The process of propagating and backpropagating will continue until the it is terminated either when error is very small or the model has reached a maximum number of iterations. In a typical neural network, finding the correct weighting is more of an optimization problem, equivalent to a maximum likelihood estimation for the weights, most imploring some kind of gradient descent algorithm to do so. But another way to assign weights is through posterior inference, which is known as a Bayesian neural network.\n",
-    "\n",
-    "In a Bayesian statistics, prior probability and likelihood of an event come together to produce a posterior probability, with the more information you add to the model the more accurate the posterior distribution is likely to become. With Bayesian neural networks the same process of using prior information to update posterior probability is used in regards to individual weightings in the neural network.\n",
-    "\n",
-    "From a probabilistic standpoint, finding just the maximum likelihood of the weighting of the model lacks the proper theoretical justification. In doing this, it ignores any uncertainly that may exist in proper weighting values of the nodes and connections by selecting a single point estimate for each weight, which can also lead to a problem of overfitting the model. The way these concerns can be addressed is by introducing regularization to the weighting process by using posterior inference. In doing this we shift the weighting process to a maximum posteriori probability estimate instead of a single maximum likelihood estimate. By the regularization of weights, it makes it possible to understand the weighting selection process and reasoning, turning the tradition ‘black box’ learning system of a neural network to what is now being considered a ‘white box.’ \n",
-    "\n",
-    "## Method\n",
-    "\n",
-    "I will creating a two dimension duel moon dataset, with a class of the data making up each moon, to train and test test various Bayensian nerual networks. The neural network to be created will have two hidden layers and will use Bernoulli likehood to make the classification decision. In order to create the various distributed weighting I will be using two different traditional Markov Chain Monte Carlo sampling algorithms of Metropolis and NUTS and a newer variational inference algorithm called ADVI. \n",
-    "* **Metropolis:** Metropolis–Hastings algorithm - A sampling method which generates a random walk using a proposal density and a method for rejecting some of the proposed moves. \n",
-    "* **NUTS:** No-U-Turn Sampler -  A recursive algorithm to build a set of likely candidate points that spans a wide swath of the target distribution, stopping automatically when it starts to double back and retrace its steps. \n",
-    "* **ADVI:** Automatic Differentation Variational Inference - Insteads of drawing samples from the posterior it fits a distribution to the posterior turning a sampling problem into and optimization problem\n",
-    "\n",
-    "For each sampling method, I will perform 5000 samples per model. As point of comparison I have decided to use a simple logistic regression classifier as a bench mark in examining the performance of the Bayensian neural networks.\n",
-    "\n",
-    "One of the main concerns with neural network models, especially Bayesian Neural Networks, is how long they can take to build and train. So help account for this in my comparison between models I will be examing overall classification accuracy as well the time it takes to build the models.\n",
-    "\n",
-    "## Loading Packages and Functions\n",
-    "\n",
-    "First I load all the various packages that I will be using throughout the workbook"
+    "## Loading Packages and Creating Functions"
    ],
    "metadata": {}
   },
@@ -74,13 +43,6 @@
    }
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "This next is a function that will allow me draw what the neural networks I will be using look like."
-   ],
-   "metadata": {}
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "source": [
@@ -114,9 +76,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Creating Data\n",
-    "\n",
-    "Now I will create and plot the data I will be using for the creating of my different models. Overall there will be a 1000 samples created, with enough noise to the dataset that there is overlap between the classifications. I wanted it this way so there would be no simple solution with 100% accuracy, so we would be able to compare the difference between how the models function."
+    "## Creating Data"
    ],
    "metadata": {}
   },
@@ -162,9 +122,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Basic Logistic Classifier\n",
-    "\n",
-    "Before I start creating the different neural network I wanted to go ahead and create a simple logistic model for comparision. Since there is only 2 inputs for this 2 dimensioned dataset the only possible classifier this model could provide is a straight line across the dataset."
+    "## Basic Logistic Classifier"
    ],
    "metadata": {}
   },
@@ -189,20 +147,6 @@
    "metadata": {}
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "An advantage of a simple model like this it only takes miliseconds to create a model"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### Accuracy"
-   ],
-   "metadata": {}
-  },
-  {
    "cell_type": "code",
    "execution_count": 6,
    "source": [
@@ -223,16 +167,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "So it seems like this straight line classifiers the data correct over 88% of the time, now lets see if that can be improved through neural networks."
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Neural Network Model Function\n",
-    "\n",
-    "This is the function that will be used to build the neural network, where  the input, output, layers, connections, and classifier of the neural network is defined."
+    "## Neural Network Model Function"
    ],
    "metadata": {}
   },
@@ -287,9 +222,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Neural Network with 2-5 Node Hidden Layers\n",
-    "\n",
-    "For the first neural networks I will be creating will have two different 5 node hidden layers. We will start by setting the training data for the neural networks to use."
+    "## Neural Network with 2-5 Node Hidden Layers"
    ],
    "metadata": {}
   },
@@ -306,13 +239,6 @@
    }
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "Then I will actually create the network with the five nodes on two hidden layers"
-   ],
-   "metadata": {}
-  },
-  {
    "cell_type": "code",
    "execution_count": 9,
    "source": [
@@ -326,7 +252,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "This is what the architechure of the neural network we just created looks like, with the two input nodes on the left, the two five node hidden layers in the middle, and the single output node on the right side of the model."
+    "### Neural Network Diagram"
    ],
    "metadata": {}
   },
@@ -357,9 +283,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Sampling\n",
-    "\n",
-    "The first sampling method that I will run is Metropolis sampling method. In doing this the model is trying to find the maximum posteriori probability of MAP with the Metropolis algorithm and I am giving the process 5000 steps to do so. After I run the sampling process I am going to plot the sample created so that we can see the distribution for the weighting. Also when running this instead of actually running 5000 steps, the process runs through 5500 steps, using the first 500 steps to tune the model."
+    "### Sampling"
    ],
    "metadata": {}
   },
@@ -423,15 +347,6 @@
    }
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "When compare to the simple logistic regression this took quite a bit more time but it still didn't really take that much time at all finishing in just 12.4 seconds to run through a 5000 step iterations. It's really interesting to look at all the distrubtions created for the different weighting.\n",
-    "\n",
-    "Next I will you the same method as before to for the NUTS sampling method, looking for the MAP and giving the algorithm 5000 steps, after the 500 training steps, to do so."
-   ],
-   "metadata": {}
-  },
-  {
    "cell_type": "code",
    "execution_count": 13,
    "source": [
@@ -491,15 +406,6 @@
    "metadata": {
     "scrolled": true
    }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "With NUTS the process took alot longer to complete, just over 6 minutes. But its interesting how different the weighting distribution looks from the first sampling method compared to this sampling method. With this method of sampling everything seems much more evenly distributed, but we'll have to see how they perform.\n",
-    "\n",
-    "Lastly we will us the ADVI to create different variational inferences to try to fit a distribution to the posterior instead of drewing it. We set up the sampling process by have the ADVI create 50000 samples and then have 5000 steps to fit those samples to the posterior distribution."
-   ],
-   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -567,17 +473,6 @@
    }
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "So overall this took quite a bit more time then logistic regression, and about 1.5 times as much at the Metropolis method but it still completed much faster than the NUTS method in only 18.4 sconds.\n",
-    "\n",
-    "### Accuracy\n",
-    "\n",
-    "Now that we have built the three different posterior distributions for the weights lets see how the performed. First we will replace the training data with the testing data."
-   ],
-   "metadata": {}
-  },
-  {
    "cell_type": "code",
    "execution_count": 17,
    "source": [
@@ -589,13 +484,6 @@
    "metadata": {
     "collapsed": true
    }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "We will generate predictions from the model using the posterior predictive check. We use this posterior predictive check from the sample to generate in data in form of classification predictions from the posterior distributions created."
-   ],
-   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -904,13 +792,6 @@
   {
    "cell_type": "markdown",
    "source": [
-    "To me these are the most interesting graphs to look at, to see some of the logic behind how the classification decisions where made. When looking at the straight line the first model made compared to the contoured lines the neural networks were able to create in comparision it is easy to see why the neural networks performed so much better. Also I find the differences between the neural networks very interesing as well, with the tradition algorithm seeming to have a much more precise line where the ADVI seems to be a lightning bolt of a straight line, but still performing quite well."
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
     "## Results\n",
     "\n",
     "| Model      | Step Method | Hidden Layes| Time to Build | Accuracy|\n",
@@ -918,17 +799,7 @@
     "| Logistic Regression | - | - |9.85 ms|88.6%|\n",
     "| BNN | Metropolis | 5,5 |12.4 s|94.2%|\n",
     "| BNN | NUTS | 5,5 |6min 5s|94.2%|\n",
-    "| BNN | ADVI | 5,5 |18.4 s|94.4%|\n",
-    "\n",
-    "## Summary\n",
-    "\n",
-    "In examining my results it doesn't seem like there is any really clear winner between the all the neural networks that I built. There seemed to be a natural maxium of how well the model could possibly perform with given data set, which was around 94.2-94.4%. But overall they all seemed to perform quite a bit better than the simple logisitic regression classifier. \n",
-    "\n",
-    "There is noticable diffence in the speed of which the models were created which equaties to how much processing time these different neural networks take to build. The NUTS model took the longest to build overall, taking between 6 to 10 minutes with none of the other neural networks taking over 30 seconds to build. In between the ADVI and Metropolis, the Metropolis was faster building both of it models, but I'm not exactly sure if that will scale out when the inputs and the complexity of the models increase. With the ADVI sampling, what seemed to take the longest the initial build of the 50000 samples, but then the fitting of the sampling didn't take much time at all, so this might scale out better when the models are more complex.\n",
-    "\n",
-    "## Concussion \n",
-    "\n",
-    "Though the world of deep learning is vast and expansive, I feel like I gain a lot of variable insights into that world through the exploration of Bayesian nerual networks. In terms of my overall objective of this project I was very happy with the way this project turned out and what I ended up learning from it. I feel like I gained a much better understanding of the practical application of MCMC sampling, the different sampling techniques of MCMC, as well as how to build and use MCMC going foward. And by using this a simple classification problem to build Bayesians Neural Network I feel like I gained a much better understanding of what nueral networks are, the difference between a traditional neural network and Bayesian neural network, and the multitude of different possibly uses for them moving forward. I am excited to see what kind of insights I will be able to acquire of this deep learning method here in the near future."
+    "| BNN | ADVI | 5,5 |18.4 s|94.4%|"
    ],
    "metadata": {}
   }
