Changed MD in Notebook

--- a/Bayesian Neural Network/BayesianNueralNetwork.ipynb
+++ b/Bayesian Neural Network/BayesianNueralNetwork.ipynb
@@ -600,16 +600,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "All three different Bayesian neural network models did a much better job at predicting the classification of the new testing set, but all the of the accuracy of the neural networks were very close to one another, with the first models performing exactly the same 94.2% with the ADVI model performin a little better with 94.4% accuracy."
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### Scatter Plots\n",
-    "\n",
-    "Lets see exactly what the models predicted of the testing data provided to them by plotting their predictions"
+    "### Scatter Plots"
    ],
    "metadata": {}
   },
@@ -659,16 +650,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "In looking at the scatter plot created it is easy to see where the logistic regression just gave it its best try with a single straight line where the neural networks were able to go between the two different moons that were created or a greater overall accuracy of the model. It is really interesting that these two kinds of models can so much of different decisions using these simple datapoints."
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### Probability surface\n",
-    "\n",
-    "Lets now take it one step further by ploting not only the predicted results but the underlying probability of the models that led to those results. To do this we will plot the whole class probability predictions on a grid over the input space."
+    "### Probability surface"
    ],
    "metadata": {}
   },
